KSAM-439
TO/FROM_PERIOD